# AltoTech

./: .env  .gitignore  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_user_department.py
core/: settings.py  urls.py
help_support/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
help_support/migrations/: 0001_initial.py  0002_issue_software_version_alter_issue_file.py  0003_alter_issue_software_version.py
templates/: base.html
templates/accounts/: admin_signin.html  signin.html  signup.html
templates/help_support/: home.html  issue_form.html
