[tool.poetry]
name = "altotech"
version = "0.1.0"
description = ""
authors = ["Win Htet Aung-3 <winhtet.aung3@frontiir.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
django-environ = "^0.9.0"
mysqlclient = "^2.1.1"
django-allauth = "^0.51.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
